Avoid reflection and also fix  TestPrintXML